@@ -171,6 +171,8 @@ def std_curve(values, weights=None):
     res = numpy.sqrt(numpy.einsum('i,i...', weights, (m - values) ** 2))
     return res
 
+cw_dt = numpy.dtype([('c', float), ('w', float)])
+
 
 # NB: for equal weights and sorted values the quantile is computed as
 # numpy.interp(q, [1/N, 2/N, ..., N/N], values)
@@ -203,11 +205,12 @@ def quantile_curve(quantile, curves, weights=None):
         assert len(weights) == R, (len(weights), R)
     result = numpy.zeros(curves.shape[1:])
     for idx, _ in numpy.ndenumerate(result):
-        data = curves[(slice(None), ) + idx]
-        sorted_idxs = numpy.argsort(data)
-        cum_weights = numpy.cumsum(weights[sorted_idxs])
+        cw = numpy.zeros(R, cw_dt)  # (curve, weight)
+        cw['c'] = curves[(slice(None), ) + idx]
+        cw['w'] = weights
+        cw.sort(order='c')
         # get the quantile from the interpolated CDF
-        result[idx] = numpy.interp(quantile, cum_weights, data[sorted_idxs])
+        result[idx] = numpy.interp(quantile, cw['w'].cumsum(), cw['c'])
     return result
 
 
