@@ -1,3 +1,3 @@
-#,,,,,,,,"generated_by='OpenQuake engine 3.19.0-gitc093471329', start_date='2023-12-21T06:41:15', checksum=2065913176, investigation_time=50.0, risk_investigation_time=50.0"
+#,,,,,,,,"generated_by='OpenQuake engine 3.19.0-git3784624a21', start_date='2023-12-21T07:33:35', checksum=2065913176, investigation_time=50.0, risk_investigation_time=50.0"
 asset_id,taxonomy,lon,lat,business_interruption,contents,nonstructural,occupants,structural
-a3,tax1,-122.57000,38.11300,9.27133E+00,6.15716E+01,8.29307E+01,1.85427E-04,3.11339E+01
+a3,tax1,-122.57000,38.11300,1.05218E+01,7.00475E+01,9.41579E+01,2.10435E-04,3.51617E+01
